# TypesettingProject

./: .cursorrules  .gitignore  .windsurfrules  App.xaml.cs  NativeMethods.cs  Typesetting.sln  UI_Application.csproj  UI_Application.csproj.nuget.dgspec.json  UI_Application_2h32kfej_wpftmp.csproj.nuget.dgspec.json  UI_Application_4dz3d3vw_wpftmp.csproj.nuget.g.props  build_dll.ps1  build_now.bat  fix_unicode_build.bat  project.assets.json  project.nuget.cache  simple_build.bat  test_input.txt
CoreEngine/: CMakeLists.txt
CoreEngine/include/: TypesettingEngine.h
CoreEngine/src/: InteropInterface.cpp
DataLayer (C# Library)/: DataLayer.csproj  DatabaseContext.cs
Services/: PaginationEngine.cs  TextHelper.cs
UI_Application (WPF Core)/: App.xaml  NativeMethods.cs  UI_Application.csproj
UI_Application (WPF Core)/Constants/: LayoutConstants.cs
UI_Application (WPF Core)/Converters/: PageInfoConverter.cs
UI_Application (WPF Core)/Models/: PageModel.cs  ParsedDocument.cs
UI_Application (WPF Core)/Rendering/: PageRenderer.cs
UI_Application (WPF Core)/Services/: ColumnLayoutEngine.cs  HeightCalculator.cs  PaginationEngine.cs  PdfExporter.cs  TextParser.cs
UI_Application (WPF Core)/ViewModels/: EditorViewModel.cs
UI_Application (WPF Core)/Views/: MainWindow.xaml.cs
ViewModels/: EditorViewModel.cs
Views/: MainWindow.xaml  MainWindow.xaml.cs
cmake-4.3.1/Source/: CMakeVersion.cmake
